Resolves: fdo#72464 Character line break is set to 0 Options/.../Writing Aids

Change-Id: I9f3d1c64fde064fc7ba9bdfcb9e35032a0c40255